--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 django-xtalk-template = {path = "./django-x-talk-template"}
 
 [dev-packages]
+autopep8 = "*"
 
 [requires]
 python_version = "3.8"
