--- a/Pipfile
+++ b/Pipfile
@@ -5,9 +5,12 @@ name = "pypi"
 
 [packages]
 django-xtalk-template = {path = "./django-x-talk-template"}
+fontawesome-free = "*"
+iottalk-py = "*"
+django-sslserver = "*"
 
 [dev-packages]
 autopep8 = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.9"
