--- a/Pipfile
+++ b/Pipfile
@@ -4,15 +4,17 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django-xtalk-template = {path = "./django-x-talk-template"}
 fontawesome-free = "*"
 iottalk-py = "*"
-django-sslserver = "*"
 psycopg2-binary = "*"
 beautifulsoup4 = "*"
+python-dotenv = "*"
+django-xtalk-template = {path = "./django-x-talk-template"}
+django-jsonview = "*"
 
 [dev-packages]
 autopep8 = "*"
+django-sslserver = "*"
 
 [requires]
-python_version = "3.9"
+python_version = "3.10"
