Update nginx config

--- a/conf/nginx/nginxconfig.io/general.conf
+++ b/conf/nginx/nginxconfig.io/general.conf
@@ -10,6 +10,12 @@ location = /robots.txt {
     access_log    off;
 }
 
+# Disable HTML caching
+location ~* \.(?:html?)$ {
+    add_header Cache-Control "no-cache";
+    access_log off;
+}
+
 # gzip
 gzip            on;
 gzip_vary       on;
