--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,10 +28,10 @@ services:
       - 443:443
     volumes:
       - ./conf/nginx/nginxconfig.io:/etc/nginx/nginxconfig.io
-      - ./conf/nginx/sites-available:/etc/nginx/sites-available
       - ./conf/nginx/sites-enabled:/etc/nginx/sites-enabled
       - ./conf/nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./conf/nginx/ssl:/etc/nginx/ssl
+      - ./conf/nginx/ssl/ssl:/etc/nginx/ssl
+      - ./conf/nginx/ssl/dhparam.pem:/etc/nginx/dhparam.pem
       - ./webthingstalk/static:/static
     networks:
       - webthingstalk-net
