Update nginx config

--- a/conf/nginx/sites-enabled/webthingstalk-yuching.mylabs.space.conf
+++ b/conf/nginx/sites-enabled/webthingstalk-yuching.mylabs.space.conf
@@ -1,1 +1,46 @@
-../sites-available/webthingstalk-yuching.mylabs.space.conf
+server {
+    listen              443 ssl http2;
+    listen              [::]:443 ssl http2;
+    server_name         webthingstalk-yuching.mylabs.space;
+
+    # SSL
+    ssl_certificate     /etc/nginx/ssl/nginx.crt;
+    ssl_certificate_key /etc/nginx/ssl/nginx.key;
+
+    # security
+    include             nginxconfig.io/security.conf;
+
+    # reverse proxy
+    location / {
+        proxy_pass http://webthingstalk:8000;
+        include    nginxconfig.io/proxy.conf;
+    }
+
+    location /static {
+        alias /static;
+        expires 14d;
+    }
+
+    # additional config
+    include nginxconfig.io/general.conf;
+}
+
+# subdomains redirect
+server {
+    listen              443 ssl http2;
+    listen              [::]:443 ssl http2;
+    server_name         *.webthingstalk-yuching.mylabs.space;
+
+    # SSL
+    ssl_certificate     /etc/nginx/ssl/nginx.crt;
+    ssl_certificate_key /etc/nginx/ssl/nginx.key;
+    return              301 https://webthingstalk-yuching.mylabs.space$request_uri;
+}
+
+# HTTP redirect
+server {
+    listen      80;
+    listen      [::]:80;
+    server_name .webthingstalk-yuching.mylabs.space;
+    return      301 https://webthingstalk-yuching.mylabs.space$request_uri;
+}
