--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ tags
 upload
 django-x-talk-template/
 .DS_Store
-conf/nginx/ssl/**
+conf/nginx/ssl/ssl
+conf/nginx/dhparam.pem
 webthingstalk/static/admin
 webthingstalk/static/fontawesome_free
